--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.10.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.27.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.2",
